--- a/LLM/appsettings.json
+++ b/LLM/appsettings.json
@@ -1,7 +1,8 @@
 {
-  "AzureOpenAI": {
-    "Endpoint": "API_URL",
+  "AzureOpenAIVector": {
+    "Endpoint": "API_ADDRESS",
     "Model": "MODEL_NAME",
     "ApiKey": "API_KEY"
-  }
+  },
+  "MinSimilarityThreshold": "0.2"
 }
