--- a/LLM/LLM.csproj
+++ b/LLM/LLM.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.5" />
     <PackageReference Include="Microsoft.Extensions.VectorData.Abstractions" Version="9.5.0" />
     <PackageReference Include="Microsoft.SemanticKernel.Connectors.InMemory" Version="1.54.0-preview" />
+    <PackageReference Include="Npgsql" Version="9.0.3" />
     <PackageReference Include="PdfPig" Version="0.1.10" />
   </ItemGroup>
 
