Make it look good

--- a/LLM/appsettings.json
+++ b/LLM/appsettings.json
@@ -1,8 +1,11 @@
 {
   "AzureOpenAIVector": {
-    "Endpoint": "API_ADDRESS",
-    "Model": "MODEL_NAME",
-    "ApiKey": "API_KEY"
+    "Endpoint": "https://<YourAzureOpenAIVectorEndpoint>/",
+    "Model": "<ModelName>",
+    "ApiKey": "<YourAzureOpenAIVectorApiKey>"
   },
-  "MinSimilarityThreshold": "0.2"
+  "MinSimilarityThreshold": "0.2",
+  "Postgres": {
+    "ConnectionString": "<YourPostgresConnectionString>"
+  }
 }
