--- a/LLM/appsettings.json
+++ b/LLM/appsettings.json
@@ -1,11 +1,16 @@
 {
   "AzureOpenAIVector": {
-    "Endpoint": "https://<YourAzureOpenAIVectorEndpoint>/",
-    "Model": "<ModelName>",
-    "ApiKey": "<YourAzureOpenAIVectorApiKey>"
+    "Endpoint": "YOUR_AZURE_OPENAIVECTOR_ENDPOINT",
+    "Model": "YOUR_AZURE_OPENAIVECTOR_MODEL",
+    "ApiKey": "YOUR_AZURE_OPENAIVECTOR_APIKEY"
   },
-  "MinSimilarityThreshold": "0.2",
+  "MinSimilarityThreshold": "YOUR_MIN_SIMILARITY_THRESHOLD",
   "Postgres": {
-    "ConnectionString": "<YourPostgresConnectionString>"
+    "ConnectionString": "YOUR_POSTGRES_CONNECTION_STRING"
+  },
+  "AzureOpenAILLM": {
+    "Endpoint": "YOUR_AZURE_OPENAILLM_ENDPOINT",
+    "Deployment": "YOUR_AZURE_OPENAILLM_DEPLOYMENT",
+    "ApiKey": "YOUR_AZURE_OPENAILLM_APIKEY"
   }
 }
