refactor: update .gitignore and project files for .NET 9.0

--- a/Api/Api.AppHost/appsettings.json
+++ b/Api/Api.AppHost/appsettings.json
@@ -1,9 +1,13 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=your-azure-postgres-server.postgres.database.azure.com;Database=llm_db;Username=your-username;Password=your-password;SSL Mode=Require;Trust Server Certificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
-      "Aspire.Hosting.Dcp": "Warning"
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
