--- a/Api/Api.AppHost/appsettings.Development.json
+++ b/Api/Api.AppHost/appsettings.Development.json
@@ -1,8 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=postgressqlvector.postgres.database.azure.com;Database=postgres;Port=5432;User Id=account;Password=1dJd5U*kQzvn@ULMAGtHgl1;Ssl Mode=Require;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   }
 }
