feat: integrate Azure OpenAI and vector storage functionality

--- a/Api/Api.AppHost/appsettings.json
+++ b/Api/Api.AppHost/appsettings.json
@@ -2,6 +2,19 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=your-azure-postgres-server.postgres.database.azure.com;Database=llm_db;Username=your-username;Password=your-password;SSL Mode=Require;Trust Server Certificate=true"
   },
+  "AzureOpenAILLM": {
+    "Endpoint": "https://your-openai-resource.openai.azure.com/",
+    "Deployment": "gpt-4o",
+    "ApiKey": "your-api-key"
+  },
+  "AzureOpenAIVector": {
+    "Endpoint": "https://your-openai-resource.openai.azure.com/",
+    "Model": "text-embedding-3-small",
+    "ApiKey": "your-api-key"
+  },
+  "Postgres": {
+    "ConnectionString": "Host=your-azure-postgres-server.postgres.database.azure.com;Database=llm_db;Username=your-username;Password=your-password;SSL Mode=Require;Trust Server Certificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
