--- a/Api/Api.AppHost/Api.AppHost.csproj
+++ b/Api/Api.AppHost/Api.AppHost.csproj
@@ -16,7 +16,7 @@
     <PackageReference Include="Azure.AI.OpenAI" Version="2.1.0" />
     <PackageReference Include="Microsoft.Extensions.AI" Version="9.0.1-preview.1.24570.5" />
     <PackageReference Include="Microsoft.Extensions.AI.OpenAI" Version="9.0.1-preview.1.24570.5" />
-    <PackageReference Include="UglyToad.PdfPig" Version="0.1.9-alpha.20240518.3" />
+    <PackageReference Include="UglyToad.PdfPig" Version="1.7.0-custom-5" />
     <PackageReference Include="Npgsql" Version="9.0.0" />
   </ItemGroup>
 
